Bug 365816 - [OpenVPN] Openvpn - Advanced - LZO compression
Summary: [OpenVPN] Openvpn - Advanced - LZO compression
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Lukáš Tinkl
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-18 15:40 UTC by Jetchko Jekov
Modified: 2024-12-23 18:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jetchko Jekov 2016-07-18 15:40:52 UTC
With openvpn-2.3.x --comp-lzo is no more simple boolean (yes/no) option. 
There is one more valid option  'adaptive'.

Whats more there there is some difference  between between presence and absence of --comp-lzo option on command line.
I have server which is started without such option and I can't make successful connection to it with any of options --comp-lzo <yes|no|adaptive>. The only way for successful connect is to leave out --com-lzo option.
(maybe this last one is an openvpn bug actually but that's what I have observed) 

Reproducible: Always




plasma-nm-5.7.1-1.fc24.x86_64
plasma-nm-openvpn-5.7.1-1.fc24.x86_64
Comment 1 Jan Grulich 2016-07-19 14:53:08 UTC
Git commit 31bcd5f2cffd1c19fbd10ab0f4172f2d82eff194 by Jan Grulich.
Committed on 19/07/2016 at 14:52.
Pushed by grulich into branch 'master'.

OpenVPN: add more choices to --comp-lzo option
REVIEW:128486

M  +72   -27   vpn/openvpn/openvpnadvanced.ui
M  +28   -4    vpn/openvpn/openvpnadvancedwidget.cpp

http://commits.kde.org/plasma-nm/31bcd5f2cffd1c19fbd10ab0f4172f2d82eff194