OpenVPN: add more choices to --comp-lzo option

BUG:365816
REVIEW:128486